# GaiaX

./: CODE_OF_CONDUCT  CONTRIBUTING  GaiaXiOS.xctestplan  LICENSE  NOTICE  README-EN.md  README-ZH.md  README.md  README_CN.md  README_EN.md  android_dev_local_publish.bat  android_dev_local_publish.sh  android_local_publish.bat  android_local_publish.sh  jitpack.yml
.github/ISSUE_TEMPLATE/: ----.md  bug-report-------.md  bug_report.md
.github/workflows/: Analyze.yml  android-test-case.yml  android.yml  ios.yml  release.yml
.qoder/quests/: read-gaiax-page-docs.md
GaiaX-Android-JS/: build.gradle
GaiaX-Android-QuickJS/: .gitignore  .gitmodules  .project  build.gradle  gradle.properties
GaiaX-Android-QuickJS/src/main/c/: CMakeLists.txt  java-common.h  java-method.c
GaiaXAdapterAndroid/: .gitignore  build.gradle  gradle.properties
GaiaXAnalyze/GXAnalyzeAndroid/: README.md  build.gradle
GaiaXAnalyze/GXAnalyzeAndroid/src/main/cpp/: CMakeLists.txt  GXJniAnalyze.cpp  JniHelp.cpp  JniHelp.h
GaiaXAnalyze/GXAnalyzeCore/: CMakeLists.txt  GXATSNode.cpp  GXATSNode.h  GXAnalyze.cpp  GXAnalyze.h  GXBeforeTree.cpp  GXBeforeTree.h  GXDataWarehouse.cpp  GXDataWarehouse.h  GXValue.h  GXWordAnalyze.cpp  GXWordAnalyze.h  LICENSE
GaiaXAnalyze/GXAnalyzeDev/: .gitignore  CMakeLists.txt  main.cpp
GaiaXAndroid/: README.md  build.gradle  gradle.properties  lint.xml  settings.gradle
GaiaXAndroid/puml/: GXEngineClassDiagram.puml  GXEngineSequenceDiagram-创建视图流程.puml  GXEngineSequenceDiagram-绑定数据流程.puml  GXEngineSequenceDiagram-获取模板流程.puml
GaiaXAndroidAdapter/: build.gradle  proguard-rules.pro
GaiaXAndroidClientToStudio/: .gitignore  build.gradle
GaiaXAndroidDemo/: README.md  build.gradle  build.gradle.kts  demo.key  gradle.properties  settings.gradle  settings.gradle.kts
GaiaXAndroidDemo/GaiaXAndroidBenchmark/: build.gradle
GaiaXAndroidDemo/GaiaXAndroidMicrobenchmark/: build.gradle
GaiaXAndroidDemo/GaiaXFastPreview/: build.gradle
GaiaXAndroidDemo/GaiaXWebSocket/: build.gradle
GaiaXAndroidDemo/app/: .gitignore  build.gradle  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
GaiaXAndroidDemo/gradle/: libs.versions.toml
GaiaXAndroidDemo/microbenchmark/: build.gradle
GaiaXAndroidDemo_/: .gitignore  build.gradle  demo.key
GaiaXAndroidDemo_/GaiaXWebSocket/: build.gradle
GaiaXAndroidJS/: .gitignore  build.gradle  gradle.properties
GaiaXAndroidJSAdapter/: build.gradle  gradle.properties
GaiaXAndroidJSProxy/: .gitignore  build.gradle
GaiaXAndroidQuickJS/: build.gradle  gradle.properties
GaiaXAndroidQuickJS/quickjs/: CMakeLists.txt  gxquickjs-patch.c  gxquickjs-patch.h  qjscalc.c  quickjs-patch.c  quickjs-patch.h
GaiaXAndroidUnits/: settings.gradle
GaiaXAndroidUnits/app/: .gitignore  build.gradle
GaiaXAndroid_/: .gitignore
GaiaXDemoResource/: sync.sh
GaiaXDemoResource/data/: recommend.json
GaiaXHarmony/: README.md  build-profile.json5  build_and_install.sh  build_and_install_gaiax.sh  oh-package.json5
GaiaXHarmony/AppScope/: app.json5
GaiaXHarmony/GXStretchBinding/: .gitignore  build-profile.json5  oh-package.json5
GaiaXHarmony/GXStretchBinding/GXStretch/src/main/cpp/: CMakeLists.txt  hilog.cpp  hilog.h  napi_init.cpp
GaiaXHarmony/GXStretchBinding/GXStretch/src/main/cpp/types/libgxstretch/: index.d.ts
GaiaXHarmony/GaiaX/: Index.ets  build-profile.json5  oh-package.json5
GaiaXHarmony/GaiaXAnalyze/GaiaXAnalyzeHarmony/GaiaXAnalyze/src/main/cpp/: CMakeLists.txt  GXNapiAnalyze.cpp
GaiaXHarmony/GaiaXAnalyze/GaiaXAnalyzeHarmony/GaiaXAnalyze/src/main/cpp/types/analysiscore/: index.d.ts  oh-package.json5
GaiaXHarmony/GaiaXCore/: .gitignore  build-profile.json5  oh-package.json5
GaiaXHarmony/app/: build-profile.json5  oh-package-lock.json5  oh-package.json5
GaiaXHarmony/config/: auto_debug_40086000132854920.cer  auto_debug_40086000132854920.csr  auto_debug_40086000132854920.p12  auto_debug_GaiaXHarmony_com.alibaba.gaiax.demo_40086000132854920.cer  auto_debug_GaiaXHarmony_com.alibaba.gaiax.demo_40086000132854920.csr  auto_debug_GaiaXHarmony_com.alibaba.gaiax.demo_40086000132854920.p12  auto_debug_GaiaXHarmony_com.alibaba.gaiax.demo_40086000132854920.p7b  debug.p12
GaiaXHarmony/hvigor/: hvigor-config.json5
GaiaXJSiOS/: .gitignore  GaiaXJS.podspec  Podfile  README.md
GaiaXJSiOS/GaiaXJS/: GaiaXJS.h  Info.plist
GaiaXJSiOS/GaiaXJS.xcodeproj/: project.pbxproj
GaiaXJSiOS/GaiaXJS.xcworkspace/: contents.xcworkspacedata
GaiaXSocketiOS/: .gitignore  GaiaXSocket.podspec  Podfile
GaiaXSocketiOS/GaiaXSocket.xcodeproj/: project.pbxproj
GaiaXSocketiOS/GaiaXSocket.xcworkspace/: contents.xcworkspacedata
GaiaXStretch/: Cargo.toml
GaiaXStretch/bindings/harmony/: Cargo.toml  README.md  build.sh  build_debug.sh  config  x86_64-unknown-linux-ohos-clang.sh
GaiaXStretch/bindings/harmony/cross-compile-config/: aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.sh  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.sh  x86_64-unknown-linux-ohos-clang++.sh  x86_64-unknown-linux-ohos-clang.sh
GaiaXStretch/bindings/harmony/src/: lib.rs
GaiaXStretch/bindings/harmony_stretch/GXStretch/src/main/cpp/: CMakeLists.txt  stretch.cpp
GaiaXStretch/bindings/harmony_stretch/GXStretch/src/main/cpp/types/libgxstretch/: oh-package.json5
GaiaXStretch/bindings/harmony_stretch/entry/src/main/cpp/: CMakeLists.txt  hello.cpp  stretch.cpp
GaiaXTaro/: .gitignore  README.md  lerna.json  nx.json  package.json  project.config.json  project.tt.json
GaiaXUnitTestResource/: sync.sh  sync_android_to_common.sh  sync_ios_to_common.sh
GaiaXiOS/: .gitignore  GaiaXiOS.podspec  Podfile  README.md
GaiaXiOSDemo/: .gitignore  Podfile  fastpod.sh
harmony/: Cargo.toml  aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.sh  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.sh  build.rs  config  config.toml  x86_64-unknown-linux-ohos-clang++.sh  x86_64-unknown-linux-ohos-clang.sh
stretch/: .gitignore
testNdk/: CMakeLists.txt
testNdk/src/: CMakeLists.txt  hello.cpp  sum.cpp
(+3046 files in other folders)
