[package]
name = "harmony-stretch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stretch"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
# stretch = { path = "../.." }

[workspace]
members = []
